# Multi-Source-Candidate-Data-Transformer

./: README.md  pyproject.toml
config/: default_output.json
fixtures/: ats_export.json  github_mock.json  malformed.csv  recruiter.csv  resume_sample.txt  truncated.json
src/pipeline/: __init__.py  __main__.py  blocking.py  cli.py  confidence.py  matching.py  merge.py  normalizers.py  projection.py  schema.py  ui.py
src/pipeline/extractors/: __init__.py  csv_extractor.py  github_extractor.py  json_extractor.py  resume_extractor.py
tests/: __init__.py  conftest.py  test_edge_cases.py
