[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "candidate-data-transformer"
version = "0.1.0"
description = "Multi-source candidate data ingestion, identity resolution, and profile merging pipeline."
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "phonenumbers>=8.0",
    "jsonpath-ng>=1.5",
    "requests>=2.28",
    "python-dateutil>=2.8",
    "eval-type-backport>=0.2.0",  # needed for X | None type syntax on Python <3.10
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
